--- a/src/styles/cvgenerator.css
+++ b/src/styles/cvgenerator.css
@@ -107,3 +107,15 @@ form p {
   display: flex;
   flex-direction: column;
 }
+
+@media screen and (min-width: 600px) {
+  form {
+    width: 500px;
+  }
+}
+
+@media screen and (min-width: 1000px) {
+  form {
+    width: 800px;
+  }
+}
