--- a/src/styles/cvgenerator.css
+++ b/src/styles/cvgenerator.css
@@ -2,13 +2,40 @@
   --barlow: 'Barlow', sans-serif;
 }
 
+label.optional:after {
+  content: '(opt.)';
+  color: grey;
+  border-radius: 10px;
+  margin-left: 5px;
+  padding: 2px;
+  font-size: 0.9rem;
+}
+
+.cv-main-heading {
+  background-color: #3772ff;
+  color: white;
+  width: 100%;
+  text-align: center;
+  font-size: 2.4rem;
+  font-family: var(--poppins);
+  margin-bottom: 2rem;
+}
+
+.optional-paragraph {
+  color: grey;
+  font-family: var(--poppins);
+  font-size: 0.8rem;
+}
+
 .cv-gen-container {
   display: flex;
-  justify-content: center;
+  flex-direction: column;
+  align-items: center;
 }
 
 .cv-forms-container {
   display: flex;
+  align-items: center;
   flex-direction: column;
 }
 
@@ -25,9 +52,15 @@ form,
 form {
   background-color: #f4faff;
   padding: 1.5rem;
-  width: 300px;
   border-radius: 10px;
   margin-bottom: 10px;
+}
+
+.generator-h1,
+.educational-h2,
+.practical-h3,
+form {
+  width: 300px;
 }
 
 form label {
@@ -100,7 +133,7 @@ form p {
   min-width: 80px;
   align-self: center;
   margin-top: 20px;
-  margin-bottom: 20px;
+  margin-bottom: 60px;
   background-color: #3772ff;
 }
 
@@ -111,13 +144,31 @@ form p {
 }
 
 @media screen and (min-width: 600px) {
+  .generator-h1,
+  .educational-h2,
+  .practical-h3,
   form {
     width: 500px;
+  }
+  .optional-paragraph {
+    font-size: 1rem;
+  }
+  .cv-main-heading {
+    font-size: 2.9rem;
   }
 }
 
 @media screen and (min-width: 1000px) {
+  .generator-h1,
+  .educational-h2,
+  .practical-h3,
   form {
     width: 800px;
+  }
+  .optional-paragraph {
+    font-size: 1.2rem;
+  }
+  .cv-main-heading {
+    font-size: 3rem;
   }
 }
