--- a/src/styles/cvgenerator.css
+++ b/src/styles/cvgenerator.css
@@ -25,7 +25,7 @@ label.optional:after {
   margin-bottom: 2rem;
   color: red;
   font-family: var(--poppins);
-  font-size: 1.3rem;
+  font-size: 1.1rem;
   display: none;
 }
 
@@ -167,6 +167,9 @@ form p {
   }
   .cv-main-heading {
     font-size: 2.9rem;
+  }
+  .error-text {
+    font-size: 1.4rem;
   }
 }
 
